revise to use mock api instead of stage

--- a/src/app/serverside-grid-view/serverside-grid-view.component.html
+++ b/src/app/serverside-grid-view/serverside-grid-view.component.html
@@ -8,6 +8,7 @@ class="ag-theme-bootstrap"
 [columnDefs]="columnDefs"
 [rowModelType]="rowModelType"
 [cacheBlockSize]="pageSize"
+debug="true"
 (gridReady)="onGridReady($event)"
 [headerHeight]="headerHeight"
 rowSelection="single"
